fix(ui): ui、打点修改

--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no"
     />
-    <title>Vite + React + TS</title>
+    <title>Zingo</title>
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-QHS95VKLJD"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-00K0FFQBRF"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'G-QHS95VKLJD');
+      gtag('config', 'G-00K0FFQBRF');
     </script>
   </head>
   <body>
